# quanser-balance

./: .gitignore  MUJOCO_LOG.TXT  README.md  deploy_output  deploy_output_smooth  pyproject.toml  qlearn.py  qtable_episode_10000.pkl  qtable_episode_100000.pkl  qtable_episode_20000.pkl  qtable_episode_30000.pkl  qtable_episode_40000.pkl  qtable_episode_50000.pkl  qtable_episode_60000.pkl  qtable_episode_70000.pkl  qtable_episode_80000.pkl  qtable_episode_90000.pkl  requirements.in  requirements.txt  sim.py  structure.txt  training_rewards.csv  utils.py
assets/: info.txt
environment/: __init__.py  curriculum.py  rewards.py  rot_pend.xml  rot_pend_env.py
logs/rotpend/ppo/PPO_1/: events.out.tfevents.1766964366.Alexs-MacBook-Air-2.local.93816.0  events.out.tfevents.1767655032.ghostfish.2164.0
logs/rotpend/ppo/PPO_10/: events.out.tfevents.1767055079.Alexs-MacBook-Air-2.local.41671.0  events.out.tfevents.1773351395.Alexs-MacBook-Air-2.local.97014.0
logs/rotpend/ppo/PPO_11/: events.out.tfevents.1767055248.Alexs-MacBook-Air-2.local.42316.0  events.out.tfevents.1773351440.Alexs-MacBook-Air-2.local.97126.0
logs/rotpend/ppo/PPO_12/: events.out.tfevents.1767057849.Alexs-MacBook-Air-2.local.48969.0  events.out.tfevents.1773351504.Alexs-MacBook-Air-2.local.97229.0
outputs/: step_response.csv  step_response_sim.csv
scripts/: compare_step.py  deploy.py  play.py  run.py  run_hardware.py  sb3.py  sb3_BACKUP.py  sim.py  test.py
src/quanser_balance/: cli.py
src/quanser_balance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quanser_balance/dynamics/: params.py
src/quanser_balance/envs/: __init__.py  inv_pend_env_2.py  inverted_pendulum_env.py  rot_pend_env.py  rot_pend_env_BACKUP.py
src/quanser_balance/rl/: PPO.py  train.py
src/quanser_balance/sim/: backend.py  run.py
tests/: test.py
(+106 files in other folders)
